[package]
name = "binary-db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
lz4 = "1.26.0"
rayon = "1.10.0"
lru = "0.12.4"
stopwatch = "0.0.7"
dashmap =  { version = "=5.5.3", features = ["rayon", "inline"] }
bincode = "1.3.3"
serde = { version = "1.0.210", features = ["derive"] }
bloom = "0.3.1"